fix bug - toggle height displaying incorrectly on mobile

--- a/src/styles/toggle.module.css
+++ b/src/styles/toggle.module.css
@@ -2,6 +2,7 @@
   height: 0;
   width: 0;
   visibility: hidden;
+  display: none;
 }
 .button,
 .toggleLeft,
